--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/h/index.xhtml
@@ -28,7 +28,7 @@
             <div style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px;"
                      data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM017_12')}</div>
-                <div
+                <div id ="H1_6"
                      data-bind="ntsDatePicker: {
 							name: '#[QMM017_12]',
 							value: startMonth,
