--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
@@ -188,10 +188,7 @@
                                             enable: enable,
                                             readonly: readonly,
                                             immediate: false,
-                                            option: {
-                                                grouplength: 3,
-                                                currencyformat: 'JPY'
-                                                }
+                                            option: {grouplength: 3}
                                             }"/>
                                 </div>
                             </div>
