CCG0015 ThanhPV Fix bug: 102574

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/ccg015.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/a/ccg015.a.style.css
@@ -2,6 +2,10 @@
 	padding-left : 30px !important;
 	min-width: 1200px;
 } */
+
+#functions-area{
+    overflow: visible;
+}
 .tr360 {
 	width: 360px !important;
 }
