--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -2,8 +2,8 @@
         <div class="functions-area sidebar-content-header flex" style = "min-width: 1000px;">
 
                 <div id="A">
-                        <span>#{i18n.getText('QMM020_5')}</span>
-                        <button id="A1_1" tabindex="1" class="proceed"
+                        <span style="position: absolute;margin-left: -40px;font-size: 25px;">#{i18n.getText('QMM020_5')}</span>
+                        <button style ="margin-left:48px" id="A1_1" tabindex="1" class="proceed"
                                 data-bind="click: register, enable: $root.errors.isEmpty() &amp;&amp; enableRegisterButton()">#{i18n.getText('QMM020_1')}</button>
 
                         <button id="A1_2" tabindex="2"
