--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/c/index1.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/c/index1.xhtml
@@ -21,7 +21,7 @@
 			<div style="margin-left: 30px; margin-bottom: 30px;"
 				data-bind="ntsPanel:{width: '290px', height: '700px', direction: 'right', showIcon: true, visible: true}">
 				<!-- C1_2 厚生年金保険料率一覧 -->
-				<div style="width: 290px" tabindex="1"
+				<div id="C1_2" style="width: 290px" tabindex="1"
 					data-bind="ntsSearchBox: {
 								targetKey: 'code', 
 								mode:'igTreeDrag', 
