--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
@@ -43,13 +43,13 @@
 
     <ui:define name="content">
         <div id="functions-area" >
-            <button id="A1_1" tabindex="1" style="margin-left: 90px;" data-bind="click: create , enable: $vm.isEnableBtnCreate()" >#{i18n.getText('QMM035_2')}</button>
+            <button id="A1_1" tabindex="1" style="margin-left: 40px;" data-bind="click: create , enable: $vm.isEnableBtnCreate()" >#{i18n.getText('QMM035_2')}</button>
             <button class="proceed"  id="A1_2" data-bind="click: update ,enable: $root.errors.isEmpty" tabindex="2">#{i18n.getText('QMM035_3')}</button>
             <button id="A1_3" tabindex="3" data-bind="enable: $vm.isEnableBtnPdf()" >#{i18n.getText('QMM035_4')}</button>
             <button  id="A1_4" tabindex="4" data-bind="enable: $vm.isEnableBtnPdf() " >#{i18n.getText('QMM035_5')}</button>
             <button id="A1_5" class="danger" tabindex="5" data-bind="click: deleteCompany ,enable: $vm.isEnableBtnDelete()" >#{i18n.getText('QMM035_6')}</button>
         </div>
-        <div id="contents-area" class="fixed-flex-layout" style="margin-left: 55px;">
+        <div id="contents-area" class="fixed-flex-layout" style="margin-left: 10px;">
             <div id="content-left" class="fixed-flex-layout-left">
                 <div data-bind="ntsPanel:{width: '330px', height: '530px', direction: 'right', showIcon: true, visible: true}"
                      id="A2_1" style="margin-left: 10px;">
@@ -112,7 +112,7 @@
                         <div class="flex valign-center">
                             <div id="A4_14" class="column-1"
                                  data-bind="ntsFormLabel: { constraint: '', required: false }">#{i18n.getText('QMM035_20')}</div>
-                            <button id="A4_15" tabindex="14" data-bind="click: $parent.findDep " >#{i18n.getText('QMM035_21')}</button>
+                            <button id="A4_15" class="small" tabindex="14" data-bind="click: $parent.findDep " >#{i18n.getText('QMM035_21')}</button>
                             <span id ="A4_16" style="margin-left: 15px;" data-bind = "text: depCode" ></span>
                             <span id ="A4_17" style="margin-left: 15px;" data-bind = "text: depName"></span>
 
