--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
@@ -51,9 +51,9 @@
 			</div>
 			<div id="functions-area-bottom">
 				<!-- D3_1 -->
-				<button tabindex="3" class="x-large danger" data-bind="enable: selectedCodes().length > 0, click: deleteList">#{i18n.getText('QMM003_6')}</button>
+				<button tabindex="3" class="x-large danger" data-bind="enable: selectedCodes().length > 0, click: deleteList, timeClick: 500">#{i18n.getText('QMM003_6')}</button>
 				<!-- D3_2 -->
-				<button tabindex="4" data-bind="click: cancel">#{i18n.getText('QMM003_25')}</button>
+				<button tabindex="4" data-bind="click: cancel, timeClick: 500">#{i18n.getText('QMM003_25')}</button>
 			</div>
 			<style>
 				#D2_1_container{clear: both}
