--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
@@ -26,19 +26,19 @@
 	    <ui:define name="content">
 	        <div id="functions-area">
 	            <!-- A1_1 -->
-	            <button tabindex="1" data-bind="click: createNew">#{i18n.getText('QMM003_1')}</button>
+	            <button tabindex="1" data-bind="click: createNew, timeClick: 500">#{i18n.getText('QMM003_1')}</button>
 	            <!-- A1_2 -->
-	            <button tabindex="2" class="proceed" data-bind="enable: $root.errors.isEmpty, click: register">#{i18n.getText('QMM003_2')}</button>
+	            <button tabindex="2" class="proceed" data-bind="enable: $root.errors.isEmpty, click: register, timeClick: 500">#{i18n.getText('QMM003_2')}</button>
 	            <!-- A1_3 -->
 	            <button tabindex="3" data-bind="enable: false">#{i18n.getText('QMM003_3')}</button>
 	            <!-- A1_4 -->
-	            <button tabindex="4" data-bind="click: openDialogQmm003e">#{i18n.getText('QMM003_4')}</button>
+	            <button tabindex="4" data-bind="click: openDialogQmm003e, timeClick: 500">#{i18n.getText('QMM003_4')}</button>
 	            <!-- A1_5 -->
 	            <button tabindex="5" data-bind="enable: false">#{i18n.getText('QMM003_5')}</button>
 	            <!-- A1_6 -->
-	            <button tabindex="6" class="danger" data-bind="enable: updateMode(), click: remove">#{i18n.getText('QMM003_6')}</button>
+	            <button tabindex="6" class="danger" data-bind="enable: updateMode(), click: remove, timeClick: 500">#{i18n.getText('QMM003_6')}</button>
 	            <!-- A1_7 -->
-	            <button tabindex="7" class="danger" data-bind="enable: totalRtp() > 0, click: openDialogQmm003d">#{i18n.getText('QMM003_7')}</button>
+	            <button tabindex="7" class="danger" data-bind="enable: totalRtp() > 0, click: openDialogQmm003d, timeClick: 500">#{i18n.getText('QMM003_7')}</button>
 	        </div>
 	        <div id="contents-area" class="fixed-flex-layout">
 				<div class="fixed-flex-layout-left" style="padding-top: 20px; padding-left: 20px">
@@ -127,7 +127,7 @@
 						<!-- A3_11 -->
 						<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_16')}</div>
 						<!-- A3_12 -->
-						<button tabindex="15" data-bind="click: openDialogQmm003c">#{i18n.getText('QMM003_13')}</button>
+						<button tabindex="15" data-bind="click: openDialogQmm003c, timeClick: 500">#{i18n.getText('QMM003_13')}</button>
 						<!-- A3_13 -->
 						<span class="label" data-bind="text: reportCd" style="padding-left: 20px"></span>
 						<!-- A3_14 -->
@@ -191,7 +191,7 @@
 						<!-- A3_27 -->
 						<textarea style="height: 150px" tabindex="21" data-bind="ntsMultilineEditor: {
 							value: memo,
-							name: '#[QMM002_22]',
+							name: '#[QMM003_22]',
 							constraint: 'Memo',
 							option: {width: '350px'},
 							readonly: false}" />
