--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/e/index.xhtml
@@ -95,9 +95,9 @@
 			</div>
 			<div id="functions-area-bottom">
 				<!-- E4_1 -->
-				<button tabindex="6" class="x-large proceed" data-bind="click: execute">#{i18n.getText('QMM003_35')}</button>
+				<button tabindex="6" class="x-large proceed" data-bind="click: execute, timeClick: 500">#{i18n.getText('QMM003_35')}</button>
 				<!-- E4_2 -->
-				<button tabindex="7" data-bind="click: close">#{i18n.getText('QMM003_25')}</button>
+				<button tabindex="7" data-bind="click: close, timeClick: 500">#{i18n.getText('QMM003_25')}</button>
 			</div>
 			<style>
 				#treegridsource_container, #treegriddestination_container{clear: both}
