--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/index.xhtml
@@ -31,7 +31,7 @@
                                                    role="tab-navigator">#{i18n.getText('QMM031_10')}</a></li>
         </ul>
     </ui:define>
-    <ui:define name="sidebar-content">
+    <ui:define name="sidebar-content" style="overflow: inherit !important;">
 
         <div id="tabpanel-1" role="tabpanel" style="min-width: 1000px;">
             <div class="sidebar-content-header">
