--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -31,7 +31,8 @@
 												required: true,
 												enable: true,
 												valueFormat: 'YYYYMM',
-												dateFormat: 'yearmonth'}">
+												dateFormat: 'yearmonth'
+												}">
                             </div>
                             <span style="margin-left: 15px;" class="label">#{i18n.getText('QMM020_56')}</span>
                         </div>
@@ -45,7 +46,8 @@
 												required: true,
 												enable: true,
 												valueFormat: 'YYYYMM',
-												dateFormat: 'yearmonth'}">
+												dateFormat: 'yearmonth'
+											}">
                             </div>
                         </div>
                     </td>
