--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
@@ -52,7 +52,8 @@
 												required: true,
 												enable: isCanPickDate(),
 												valueFormat: 'YYYYMM',
-												dateFormat: 'yearmonth'}">
+												dateFormat: 'yearmonth'
+												}">
                         </div>
                         <span id="K1_8" style="margin-left: 5px;" class="label">#{i18n.getText('QMM020_56')}</span>
                     </td>
@@ -66,7 +67,9 @@
 												value: endYearMonthPeriod,
 												required: true,
 												enable: isCanPickDate(),
-												dateFormat: 'YYYY/MM/DD'}">
+												valueFormat: 'YYYYMM',
+												dateFormat: 'yearmonth'
+												}">
                             </div>
                         </div>
 
