--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -1,18 +1,17 @@
 <div>
     <div class="sidebar-content-header" style = "min-width: 1000px;">
-            <span class="title">#{i18n.getText('QMM020_7')}</span>
-            <button id="A1_1" tabindex="1" class="proceed"
-                    data-bind="click: registerPosition, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
+            <span class="title">#{i18n.getText('QMM020_9')}</span>
+            <button id="A1_1" tabindex="1" class="proceed" style="margin-left: 20px"
+                    data-bind="click: registerPosition, enable: !enableRegis() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
     </div>
     <div style="margin-top: 15px;" class="contents-area fixed-flex-layout">
-        <div class="fixed-flex-layout-left" style="margin-left: 20px">
+        <div class="fixed-flex-layout-left" style="margin-left: 60px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="F1_3" data-bind="click: openJScreen, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
-                    <button id="F1_4" data-bind="click: openKScreen, enable: $root.errors.isEmpty" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="F1_3" data-bind="click: openJScreen, enable: !enableNew() ">#{i18n.getText('QMM020_13')}</button>
+                    <button id="F1_4" data-bind="click: openKScreen, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
-
 
                 <div style="margin-top: 10px">
                     <table  id="F1_5"  data-bind="ntsGridList: {
@@ -31,7 +30,7 @@
         </div>
         <div class="fixed-flex-layout-right">
             <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
-                <div id="F2_1" style="margin-bottom: 10px;" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_38')}</div>
+                <div id="F2_1" style="margin-bottom: 5px;" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_38')}</div>
             </div>
 
             <div style="margin-bottom: 10px">
