--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -1,6 +1,6 @@
 <div>
     <div class="sidebar-content-header " style = "min-width: 1000px;">
-            <span class = "title">#{i18n.getText('QMM020_5')}</span>
+            <span class = "title">#{i18n.getText('QMM020_10')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
                     data-bind="click: registerSalary, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
@@ -8,7 +8,7 @@
                     data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
 
             <button id="A1_3" tabindex="3"
-                    data-bind="enable: false">#{i18n.getText('QMM020_3')}</button>
+                    data-bind="enable: true">#{i18n.getText('QMM020_3')}</button>
 
             <button id="A1_4" tabindex="4"
                     data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
@@ -18,9 +18,9 @@
         <div class="fixed-flex-layout-left" style="margin-left: 20px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="G1_3" data-bind="click: openJScreen, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
+                    <button id="G1_3" data-bind="click: openJScreen, enable: enable: !enableNew()">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="G1_4" data-bind="click: openKScreen, enable: $root.errors.isEmpty" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="G1_4" data-bind="click: openKScreen, enable: enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
