--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -1,7 +1,7 @@
 <div>
     <div class="sidebar-content-header" style = "min-width: 1000px;">
 
-            <span class = "title">#{i18n.getText('QMM020_5')}</span>
+            <span class = "title">#{i18n.getText('QMM020_11')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
                     data-bind="click: registerHisIndividual, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
@@ -25,9 +25,9 @@
         <div class="fixed-flex-layout-left" style="margin-left: 90px;margin-top: 20px; float: left;">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="H2_3" data-bind="click: openJScreen, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
+                    <button id="H2_3" data-bind="click: openJScreen, enable: !enableNew()">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="H2_4" data-bind="click: openKScreen, enable: $root.errors.isEmpty" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="H2_4" data-bind="click: openKScreen, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
