--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/004/d/index.xhtml
@@ -26,14 +26,15 @@
 		<ui:define name="content">
 			<!-- BEGIN FUNCTION AREA-->
 			<div id="functions-area">
-				<!-- E1_2: Button Registration -->
-				<button id="btn_002" class="button proceed separate-button fix-button" data-bind="click: register, enable: $root.errors.isEmpty">#{i18n.getText('KMF004_2')}</button>
-				<!-- E1_1: Button New -->
-				<button id="btn_005" class="button separate-button fix-button"  data-bind="click: closeDialog">#{i18n.getText('KMF004_57')}</button>
 				<!-- E1_1: Button New -->
 				<button id="btn_001" class="button separate-button fix-button"  data-bind="enable: newModeEnable, click: newMode">#{i18n.getText('KMF004_1')}</button>
+				<!-- E1_2: Button Registration -->
+				<button id="btn_002" class="button proceed separate-button fix-button" data-bind="click: register, enable: $root.errors.isEmpty">#{i18n.getText('KMF004_2')}</button>
 				<!-- E1_3: Button Delete -->
 				<button id="btn_004" class="button danger separate-button fix-button" data-bind="enable: editMode, click: remove" >#{i18n.getText('KMF004_3')}</button>
+				<!-- E1_1: Button Close -->
+				<button id="btn_005" class="separate-button fix-button"  data-bind="click: closeDialog">#{i18n.getText('KMF004_57')}</button>
+				
 			</div>
 			<!-- END FUNCTION AREA-->
 			
